--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -43,8 +43,14 @@
             padding: 8px 16px;
             border-radius: 6px;
             cursor: pointer;
-            margin-top: 10px;
+            margin: 5px;
             transition: var(--transition-fast);
+        }
+        .admin-product-card button.editar {
+            background-color: var(--primary-color);
+        }
+        .admin-product-card button.editar:hover {
+            background-color: var(--primary-hover);
         }
         .admin-product-card button:hover {
             background-color: #cc0000;
@@ -76,6 +82,12 @@
         .form-container button:hover {
             background-color: var(--primary-hover);
         }
+        .form-container button.cancelar {
+            background-color: #666;
+        }
+        .form-container button.cancelar:hover {
+            background-color: #555;
+        }
         .error-message {
             color: #ff4444;
             margin-top: 10px;
@@ -95,8 +107,9 @@
 
     <div class="container">
         <div class="form-container">
-            <h2>Cadastrar Novo Produto</h2>
+            <h2 id="form-title">Cadastrar Novo Produto</h2>
             <form id="product-form">
+                <input type="hidden" id="produto-id">
                 <input type="text" id="nome" placeholder="Nome do produto" required>
                 <textarea id="descricao" placeholder="Descrição do produto" required></textarea>
                 <input type="number" id="preco" placeholder="Preço" step="0.01" required>
@@ -128,8 +141,9 @@
                     <option value="mercadolivre">Mercado Livre</option>
                     <option value="alibaba">Alibaba</option>
                 </select>
-                <input type="file" id="imagens" multiple accept="image/*" required>
-                <button type="submit">Cadastrar Produto</button>
+                <input type="file" id="imagens" multiple accept="image/*">
+                <button type="submit" id="submit-button">Cadastrar Produto</button>
+                <button type="button" id="cancel-button" style="display: none;" class="cancelar">Cancelar</button>
             </form>
             <p id="admin-error-message" class="error-message"></p>
         </div>
