--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="header-links">
                     <a href="#" class="header-link">Ajuda</a>
                     <a href="#" class="header-link">Contato</a>
+                    <a href="admin.html" class="header-link">Admin</a>
                 </div>
             </div>
         </div>
@@ -65,7 +66,19 @@
                         <a href="#" class="nav-link active" data-categoria="todas">Ofertas do Dia</a>
                         <a href="#" class="nav-link" data-categoria="eletronicos">Eletrônicos</a>
                         <a href="#" class="nav-link" data-categoria="moda">Moda</a>
+                        <a href="#" class="nav-link" data-categoria="fitness">Fitness</a>
                         <a href="#" class="nav-link" data-categoria="casa">Casa</a>
+                        <a href="#" class="nav-link" data-categoria="beleza">Beleza</a>
+                        <a href="#" class="nav-link" data-categoria="esportes">Esportes</a>
+                        <a href="#" class="nav-link" data-categoria="livros">Livros</a>
+                        <a href="#" class="nav-link" data-categoria="infantil">Infantil</a>
+                        <a href="#" class="nav-link" data-categoria="celulares">Celulares</a>
+                        <a href="#" class="nav-link" data-categoria="eletrodomesticos">Eletrodomésticos</a>
+                        <a href="#" class="nav-link" data-categoria="pet">Pet</a>
+                        <a href="#" class="nav-link" data-categoria="jardinagem">Jardinagem</a>
+                        <a href="#" class="nav-link" data-categoria="automotivo">Automotivo</a>
+                        <a href="#" class="nav-link" data-categoria="gastronomia">Gastronomia</a>
+                        <a href="#" class="nav-link" data-categoria="games">Games</a>
                     </div>
                 </div>
             </div>
@@ -83,13 +96,19 @@
                 <li class="category-item active" data-categoria="todas"><i class="fas fa-th-large"></i> Todas as Categorias</li>
                 <li class="category-item" data-categoria="eletronicos"><i class="fas fa-laptop"></i> Eletrônicos</li>
                 <li class="category-item" data-categoria="moda"><i class="fas fa-tshirt"></i> Moda</li>
+                <li class="category-item" data-categoria="fitness"><i class="fas fa-dumbbell"></i> Fitness</li>
                 <li class="category-item" data-categoria="casa"><i class="fas fa-home"></i> Casa e Decoração</li>
                 <li class="category-item" data-categoria="beleza"><i class="fas fa-heart"></i> Beleza e Cuidado</li>
-                <li class="category-item" data-categoria="esportes"><i class="fas fa-dumbbell"></i> Esportes e Fitness</li>
-                <li class="category-item" data-categoria="infantil"><i class="fas fa-baby"></i> Bebês e Crianças</li>
-                <li class="category-item" data-categoria="automotivo"><i class="fas fa-car"></i> Automotivo</li>
-                <li class="category-item" data-categoria="games"><i class="fas fa-gamepad"></i> Games</li>
+                <li class="category-item" data-categoria="esportes"><i class="fas fa-running"></i> Esportes</li>
                 <li class="category-item" data-categoria="livros"><i class="fas fa-book"></i> Livros</li>
+                <li class="category-item" data-categoria="infantil"><i class="fas fa-baby"></i> Bebês e Crianças</li>
+                <li class="category-item" data-categoria="celulares"><i class="fas fa-mobile-alt"></i> Celulares</li>
+                <li class="category-item" data-categoria="eletrodomesticos"><i class="fas fa-blender"></i> Eletrodomésticos</li>
+                <li class="category-item" data-categoria="pet"><i class="fas fa-paw"></i> Pet</li>
+                <li class="category-item" data-categoria="jardinagem"><i class="fas fa-leaf"></i> Jardinagem</li>
+                <li class="category-item" data-categoria="automotivo"><i class="fas fa-car"></i> Automotivo</li>
+                <li class="category-item" data-categoria="gastronomia"><i class="fas fa-utensils"></i> Gastronomia</li>
+                <li class="category-item" data-categoria="games"><i class="fas fa-gamepad"></i> Games</li>
             </ul>
         </div>
     </div>
@@ -258,8 +277,19 @@
                     <ul>
                         <li><a href="#" data-categoria="eletronicos">Eletrônicos</a></li>
                         <li><a href="#" data-categoria="moda">Moda</a></li>
+                        <li><a href="#" data-categoria="fitness">Fitness</a></li>
                         <li><a href="#" data-categoria="casa">Casa e Decoração</a></li>
                         <li><a href="#" data-categoria="beleza">Beleza</a></li>
+                        <li><a href="#" data-categoria="esportes">Esportes</a></li>
+                        <li><a href="#" data-categoria="livros">Livros</a></li>
+                        <li><a href="#" data-categoria="infantil">Infantil</a></li>
+                        <li><a href="#" data-categoria="celulares">Celulares</a></li>
+                        <li><a href="#" data-categoria="eletrodomesticos">Eletrodomésticos</a></li>
+                        <li><a href="#" data-categoria="pet">Pet</a></li>
+                        <li><a href="#" data-categoria="jardinagem">Jardinagem</a></li>
+                        <li><a href="#" data-categoria="automotivo">Automotivo</a></li>
+                        <li><a href="#" data-categoria="gastronomia">Gastronomia</a></li>
+                        <li><a href="#" data-categoria="games">Games</a></li>
                     </ul>
                 </div>
             </div>
